MyBatis: 完成查询全部、模糊查询、删除操作